# haskell-davis-putnam

./: haskell-davis-putnam.cabal  sample_formulae.txt
src/: Main.hs
