name:                haskell-davis-putnam
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/aweinstock314/haskell-davis-putnam#readme
license:             BSD3
license-file:        LICENSE
author:              Avi Weinstock
maintainer:          aweinstock314@gmail.com
copyright:           Avi Weinstock
category:            This field intentionally left blank
build-type:          Simple
cabal-version:       >=1.10

executable haskell-davis-putnam
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, diagrams-lib, diagrams-svg, directory, mtl, parsec
